--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                     <a href="#gacha" class="block px-4 py-2 rounded hover:bg-gray-700 transition">#Gacha</a>
                     <a href="#history" class="block px-4 py-2 rounded hover:bg-gray-700 transition">#History</a>
                     <a href="#news" class="block px-4 py-2 rounded hover:bg-gray-700 transition">#News</a>
-                    <a href="#banners" class="block px-4 py-2 rounded hover:bg-gray-700 transition">#Banners</a>
+                    <a href="./banners.html" class="block px-4 py-2 rounded hover:bg-gray-700 transition">#Banners</a>
                     <a href="#operators" class="block px-4 py-2 rounded hover:bg-gray-700 transition">#Operators</a>
                 </nav>
             </aside>
