--- a/index.html
+++ b/index.html
@@ -49,6 +49,8 @@
                     </div>
                 </div>
             </div>
+
+            <!-- sidebar -->
             <button id="sidebar-toggle" class="fixed top-4 left-4 z-50 p-2 bg-yellow-500 text-black rounded">
                 ☰ Menu
             </button>
