--- a/index.html
+++ b/index.html
@@ -1,102 +1,129 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" charset="UTF-8" />
     <title>Gacha Site</title>
     <!-- <link href="index.css" rel="stylesheet"> -->
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
+
 <body class="bg-[url('data/banners/art/The_Wheat_and_the_Anthem.png')] bg-none bg-gray-900 mx-auto px-4">
+
     <div id="overlay" style="display: none;">
         <p id="textDislay"></p>
     </div>
     <main>
-        <div class="grid-cols-3 p-4 flex">
-
-            <div id="banners" class="grid-rows-3">
-                <img src="./banners/art/[Carnival]_Cloudtop_Lucid_Dreams.png" alt="banner-image"
-                    class="rounded-lg border border-gray-700">
-                <div id="pulling-buttons" class="grid-cols-3 flex flex-row-reverse">
-                    <button
-                        class="relative px-6 py-3 font-bold text-white uppercase tracking-wider bg-[repeating-linear-gradient(45deg,#FFBE59,#FFBE59_10px,#1f2937_10px,#1f2937_20px)] border border-yellow-500 shadow hover:scale-105 transition-transform">
-                        <div class="text-yellow-300 bg-black text-lg">
-                            pull x10
-                        </div>
-                    </button>
-                    <button
-                        class="relative px-6 py-3 font-bold text-white uppercase tracking-wider bg-[repeating-linear-gradient(45deg,#FF5959,#FF5959_10px,#1f2937_10px,#1f2937_20px)] border border-red-500 shadow hover:scale-105 transition-transform">
-                        <div class="text-red-500 bg-black text-lg">
-                            pull x1
-                        </div>
-                    </button>
-
-
-                    <div class="p-4">number of pulls:</div>
+        <nav class="bg-gray-900 text-white font-sans shadow-md">
+            <div class="max-w-7xl mx-auto px-4 py-3 flex justify-between items-center">
+                <div class="text-lg font-bold tracking-wide">
+                    <span class="text-blue-400">Arknights</span> Gacha Simulator
                 </div>
+                <ul class="flex space-x-6">
+                    <li><a href="#Home" class="hover:text-blue-400 transition-colors">Home</a></li>
+                    <li><a href="#Gacha" class="hover:text-blue-400 transition-colors">Gacha</a></li>
+                    <li><a href="#History" class="hover:text-blue-400 transition-colors">History</a></li>
+                    <li><a href="#Operators" class="hover:text-blue-400 transition-colors">Operators</a></li>
+                    <li><a href="#Banners" class="hover:text-blue-400 transition-colors">Banners</a></li>
+                </ul>
+            </div>
+        </nav>
+        <div>
+            <div class="grid-cols-2 p-4 flex">
 
-                <div id="available-operators" class="max-w-2xl">
-                    <h1 class="text-xl font-bold mb-4 bg-gray-500/60 backdrop-blur-md text-white">Available operators
-                    </h1>
-                    <div class="bg-gray-800/80 backdrop-blur-sm p-4 rounded-lg border border-gray-700">
-                        <ul class="list-disc pl-6">
-                            <li class="text-yellow-100">op6</li>
-                            <li class="text-yellow-400">op5</li>
-                            <li class="text-purple-400">op4</li>
-                            <li class="text-blue-400">op3</li>
-                        </ul>
+                <div id="banners" class="grid-rows-2">
+                    <img src="./data/banners/art/[Carnival]_Cloudtop_Lucid_Dreams.png" alt="banner-image"
+                        class="rounded-lg border border-gray-700">
+                    <div id="pulling-buttons" class="grid-cols-3 flex flex-row-reverse">
+                        <button
+                            class="relative px-6 py-3 font-bold text-white uppercase tracking-wider bg-[repeating-linear-gradient(45deg,#FFBE59,#FFBE59_10px,#1f2937_10px,#1f2937_20px)] border border-yellow-500 shadow hover:scale-105 transition-transform">
+                            <div class="text-yellow-300 bg-black text-lg">
+                                pull x10
+                            </div>
+                        </button>
+                        <button
+                            class="relative px-6 py-3 font-bold text-white uppercase tracking-wider bg-[repeating-linear-gradient(45deg,#FF5959,#FF5959_10px,#1f2937_10px,#1f2937_20px)] border border-red-500 shadow hover:scale-105 transition-transform">
+                            <div class="text-red-500 bg-black text-lg">
+                                pull x1
+                            </div>
+                        </button>
+                        <button
+                            class="relative px-6 py-3 font-bold text-white uppercase tracking-wider bg-[repeating-linear-gradient(45deg,#FFFFFF,#FFFFFF_10px,#1f2937_10px,#1f2937_20px)] border border-white shadow hover:scale-105 transition-transform">
+                            <div class="text-white bg-black text-lg">
+                                pull xcustom
+                            </div>
+                        </button>
+                        <div class="p-4">number of pulls:</div>
+                    </div>
+
+                    <!-- available-operators -->
+                    <div id="available-operators" class="max-w-2xl">
+                        <h1 class="text-xl font-bold mb-4 bg-gray-500/60 backdrop-blur-md text-white">Available
+                            operators
+                        </h1>
+                        <div class="bg-gray-800/80 backdrop-blur-sm p-4 rounded-lg border border-gray-700">
+                            <ul class="list-disc pl-6">
+                                <li class="text-yellow-100">op6</li>
+                                <li class="text-yellow-400">op5</li>
+                                <li class="text-purple-400">op4</li>
+                                <li class="text-blue-400">op3</li>
+                            </ul>
+                        </div>
+                    </div>
+
+
+                </div>
+                <!-- history -->
+                <div class="bg-gray-900 min-h-screen p-6">
+                    <h2 class="text-white text-2xl mb-6 font-bold">History</h2>
+                    <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-5 gap-6">
+                        <!-- Operator Card -->
+                        <div
+                            class="bg-gray-800 rounded-lg overflow-hidden shadow-lg hover:scale-105 transform transition duration-300">
+                            <img src="./data/ops/arts/6/SilverAsh.png" alt="Operator" class="w-full h-48 object-cover">
+                            <div class="p-4 text-white">
+                                <h3 class="text-lg font-semibold">SilverAsh x3</h3>
+                                <p class="text-sm text-gray-400">Guard</p>
+                                <div class="mt-2 flex items-center">
+                                    <span class="text-white-400 mr-1 text-sm">★ ★ ★ ★ ★ ★</span>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- Operator Card -->
+                        <div
+                            class="bg-gray-800 rounded-lg overflow-hidden shadow-lg hover:scale-105 transform transition duration-300">
+                            <img src="./data/ops/arts/6/Lin.png" alt="Operator" class="w-full h-48 object-cover">
+                            <div class="p-4 text-white">
+                                <h3 class="text-lg font-semibold">Lin</h3>
+                                <p class="text-sm text-gray-400">Caster</p>
+                                <div class="mt-2 flex items-center">
+                                    <span class="text-white-400 mr-1 text-sm">★ ★ ★ ★ ★ ★</span>
+                                </div>
+                            </div>
+                        </div>
+
+                        <!-- Repeat operator cards as needed -->
                     </div>
                 </div>
             </div>
-
-            <!-- sidebar -->
-            <div id="sidebar-placeholder"></div>
-
-            <!-- <div class="pl-4">
-
-                <h1 class="text-xl font-bold">History</h1>
-                <div id="character-gallery"
-                    class="p-4 grid grid-cols-4 grid-rows-5 gap-4 bg-gray-800 p-4 rounded-lg border border-gray-700 w-auto max-w h-full">
-                    <div class="bg-gray-600 p-1 rounded-lg border border-gray-700 flex mb-4 w-64">
-                        <img src="imgs\cropped\Lin-cropped.png" alt="avt" class="w-auto h-12">
-                        <div class="pl-3">
-                            <p class="text-yellow-100 text-xl">Lin</p>
-                            <p class="text-yellow-100 text-xl">★★★★★★</p>
-                            <p class="text-yellow-100 text-xl">count: 24</p>
-                        </div>
-                    </div>
-                    <div class="bg-gray-600 p-1 rounded-lg border border-gray-700 flex mb-4 w-64">
-                        <img src="imgs\cropped\notlin.png" alt="avt" class="w-auto h-12">
-                        <div class="pl-3">
-                            <p class="text-yellow-100 text-xl">Not Lin</p>
-                            <p class="text-yellow-100 text-xl">★★★★★★★</p>
-                            <p class="text-yellow-100 text-xl">count: 1</p>
-                        </div>
-                    </div>
-                </div>
-            </div> -->
+            <div id="gallery" class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 gap-4 p-4"></div>
+            <!-- index.html -->
+            <script type="module" src="banners.js"></script>
+        </div>
+        <div id="banners">
+            <div class="flex flex-wrap items-center gap-2 p-4 bg-gray-800 rounded-lg">
+                <!-- Search Button -->
+                <button id="search"
+                    class="flex items-center gap-2 px-4 py-2 text-sm font-medium text-white bg-yellow-500 hover:bg-yellow-600 rounded transition">
+                    🔍 Search
+                </button>
+            </div>
+            <div id="gallery" class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 gap-4 p-4">
+                
+            </div>
         </div>
     </main>
     <script src="index.js"></script>
-    <script>
-        fetch("htmls/sidebar.html")
-            .then(res => res.text())
-            .then(html => {
-                document.getElementById("sidebar-placeholder").innerHTML = html;
-
-                const menuButton = document.getElementById("sidebar-toggle");
-                const sidebar = document.getElementById("sidebar");
-                const closeButton = document.getElementById("sidebar-close");
-
-                menuButton.addEventListener("click", () => {
-                    sidebar.classList.toggle("hidden");
-                    menuButton.classList.toggle("hidden");
-                });
-
-                closeButton.addEventListener("click", () => {
-                    sidebar.classList.toggle("hidden");
-                    menuButton.classList.toggle("hidden");
-                });
-            });
-    </script>
 </body>
+
 </html>
