--- a/index.html
+++ b/index.html
@@ -74,33 +74,113 @@
 
                 </div>
                 <!-- history -->
-                <div class="bg-gray-900 min-h-screen p-6">
-                    <h2 class="text-white text-2xl mb-6 font-bold">History</h2>
-                    <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-5 gap-6">
-                        <!-- Operator Card -->
-                        <div
-                            class="bg-gray-800 rounded-lg overflow-hidden shadow-lg hover:scale-105 transform transition duration-300">
-                            <img src="./data/ops/arts/6/SilverAsh.png" alt="Operator" class="w-full h-48 object-cover">
-                            <div class="p-4 text-white">
-                                <h3 class="text-lg font-semibold">SilverAsh x3</h3>
-                                <p class="text-sm text-gray-400">Guard</p>
-                                <div class="mt-2 flex items-center">
-                                    <span class="text-white-400 mr-1 text-sm">★ ★ ★ ★ ★ ★</span>
-                                </div>
-                            </div>
-                        </div>
-                        <!-- Operator Card -->
-                        <div
-                            class="bg-gray-800 rounded-lg overflow-hidden shadow-lg hover:scale-105 transform transition duration-300">
-                            <img src="./data/ops/arts/6/Lin.png" alt="Operator" class="w-full h-48 object-cover">
-                            <div class="p-4 text-white">
-                                <h3 class="text-lg font-semibold">Lin</h3>
-                                <p class="text-sm text-gray-400">Caster</p>
-                                <div class="mt-2 flex items-center">
-                                    <span class="text-white-400 mr-1 text-sm">★ ★ ★ ★ ★ ★</span>
-                                </div>
-                            </div>
-                        </div>
+                 <div class="bg-gray-900 min-h-screen p-6 text-white">
+  <h2 class="text-2xl font-bold mb-4">History</h2>
+  <div class="grid grid-cols-2 gap-6">
+    <!-- Operator Cell -->
+    <div class="flex items-center space-x-4 bg-gray-800 p-3 rounded-lg shadow hover:bg-gray-700 transition">
+      <img src="./data/ops/arts/5/Lappland.png" alt="Operator" class="w-16 h-16 rounded-md object-cover">
+      <div>
+        <h3 class="font-semibold">Lappland</h3>
+        <p class="text-sm text-gray-400">Guard</p>
+        <span class="text-yellow-400 text-sm">★ ★ ★ ★ ★</span>
+      </div>
+    </div>
+    <!-- Operator Cell -->
+    <div class="flex items-center space-x-4 bg-gray-800 p-3 rounded-lg shadow hover:bg-gray-700 transition">
+      <img src="./data/ops/arts/5/Lappland.png" alt="Operator" class="w-16 h-16 rounded-md object-cover">
+      <div>
+        <h3 class="font-semibold">Lappland</h3>
+        <p class="text-sm text-gray-400">Guard</p>
+        <span class="text-yellow-400 text-sm">★ ★ ★ ★ ★</span>
+      </div>
+    </div>
+    <!-- Operator Cell -->
+    <div class="flex items-center space-x-4 bg-gray-800 p-3 rounded-lg shadow hover:bg-gray-700 transition">
+      <img src="./data/ops/arts/5/Lappland.png" alt="Operator" class="w-16 h-16 rounded-md object-cover">
+      <div>
+        <h3 class="font-semibold">Lappland</h3>
+        <p class="text-sm text-gray-400">Guard</p>
+        <span class="text-yellow-400 text-sm">★ ★ ★ ★ ★</span>
+      </div>
+    </div>
+    <!-- Operator Cell -->
+    <div class="flex items-center space-x-4 bg-gray-800 p-3 rounded-lg shadow hover:bg-gray-700 transition">
+      <img src="./data/ops/arts/5/Lappland.png" alt="Operator" class="w-16 h-16 rounded-md object-cover">
+      <div>
+        <h3 class="font-semibold">Lappland</h3>
+        <p class="text-sm text-gray-400">Guard</p>
+        <span class="text-yellow-400 text-sm">★ ★ ★ ★ ★</span>
+      </div>
+    </div>
+    <!-- Operator Cell -->
+    <div class="flex items-center space-x-4 bg-gray-800 p-3 rounded-lg shadow hover:bg-gray-700 transition">
+      <img src="./data/ops/arts/5/Lappland.png" alt="Operator" class="w-16 h-16 rounded-md object-cover">
+      <div>
+        <h3 class="font-semibold">Lappland</h3>
+        <p class="text-sm text-gray-400">Guard</p>
+        <span class="text-yellow-400 text-sm">★ ★ ★ ★ ★</span>
+      </div>
+    </div>
+    <!-- Operator Cell -->
+    <div class="flex items-center space-x-4 bg-gray-800 p-3 rounded-lg shadow hover:bg-gray-700 transition">
+      <img src="./data/ops/arts/5/Lappland.png" alt="Operator" class="w-16 h-16 rounded-md object-cover">
+      <div>
+        <h3 class="font-semibold">Lappland</h3>
+        <p class="text-sm text-gray-400">Guard</p>
+        <span class="text-yellow-400 text-sm">★ ★ ★ ★ ★</span>
+      </div>
+    </div>
+    <!-- Operator Cell -->
+    <div class="flex items-center space-x-4 bg-gray-800 p-3 rounded-lg shadow hover:bg-gray-700 transition">
+      <img src="./data/ops/arts/5/Lappland.png" alt="Operator" class="w-16 h-16 rounded-md object-cover">
+      <div>
+        <h3 class="font-semibold">Lappland</h3>
+        <p class="text-sm text-gray-400">Guard</p>
+        <span class="text-yellow-400 text-sm">★ ★ ★ ★ ★</span>
+      </div>
+    </div>
+    <!-- Operator Cell -->
+    <div class="flex items-center space-x-4 bg-gray-800 p-3 rounded-lg shadow hover:bg-gray-700 transition">
+      <img src="./data/ops/arts/5/Lappland.png" alt="Operator" class="w-16 h-16 rounded-md object-cover">
+      <div>
+        <h3 class="font-semibold">Lappland</h3>
+        <p class="text-sm text-gray-400">Guard</p>
+        <span class="text-yellow-400 text-sm">★ ★ ★ ★ ★</span>
+      </div>
+    </div>
+    <!-- Operator Cell -->
+    <div class="flex items-center space-x-4 bg-gray-800 p-3 rounded-lg shadow hover:bg-gray-700 transition">
+      <img src="./data/ops/arts/5/Lappland.png" alt="Operator" class="w-16 h-16 rounded-md object-cover">
+      <div>
+        <h3 class="font-semibold">Lappland</h3>
+        <p class="text-sm text-gray-400">Guard</p>
+        <span class="text-yellow-400 text-sm">★ ★ ★ ★ ★</span>
+      </div>
+    </div>
+    <!-- Operator Cell -->
+    <div class="flex items-center space-x-4 bg-gray-800 p-3 rounded-lg shadow hover:bg-gray-700 transition">
+      <img src="./data/ops/arts/5/Lappland.png" alt="Operator" class="w-16 h-16 rounded-md object-cover">
+      <div>
+        <h3 class="font-semibold">Lappland</h3>
+        <p class="text-sm text-gray-400">Guard</p>
+        <span class="text-yellow-400 text-sm">★ ★ ★ ★ ★</span>
+      </div>
+    </div>
+    
+
+    <!-- Repeat for more operators -->
+  </div>
+
+  <!-- Pagination (simple static example) -->
+  <div class="mt-6 flex justify-center space-x-2">
+    <button class="px-3 py-1 bg-gray-700 hover:bg-gray-600 rounded">Prev</button>
+    <button class="px-3 py-1 bg-blue-500 hover:bg-blue-600 rounded">1</button>
+    <button class="px-3 py-1 bg-gray-700 hover:bg-gray-600 rounded">2</button>
+    <button class="px-3 py-1 bg-gray-700 hover:bg-gray-600 rounded">Next</button>
+  </div>
+</div>
+
 
                         <!-- Repeat operator cards as needed -->
                     </div>
