--- a/html/banners.html
+++ b/html/banners.html
@@ -51,5 +51,5 @@
                 });
             });
     </script>
-    <script type="module" src="banners.js"></script>
+    <script type="module" src="/js/banners.js"></script>
 </body>
