--- a/html/sidebar.html
+++ b/html/sidebar.html
@@ -11,7 +11,7 @@
         </button>
     </div>
     <nav class="p-4 space-y-2">
-        <a href="#home" class="block px-4 py-2 rounded hover:bg-gray-700 transition">
+        <a href="/index.html" class="block px-4 py-2 rounded hover:bg-gray-700 transition">
             #Home
         </a>
         <a href="#gacha" class="block px-4 py-2 rounded hover:bg-gray-700 transition">
